# Spline_trajectory_pose_plan

./: B_S_S.m  B_trajectory.m  README.md  bspline_basis.m  bspline_basis_value.m  do_slerp.m  eval_alpha.m  pose_interp.m  quatExp.m  quatInverse.m  quatMultiply.m  quat_squad.m  sCurveQuintic.m  trapezoidal_velocity_profile.m  velocity_planning.m
Spline_trajectory_pose_plan/: B_S_S.m  B_trajectory.m  P2PMultiAxisDoubleSTrajectory.m  bspline_basis_derivative.m  computeAngularVelocityAndAcceleration.m  eval_alpha.m  get_intermediate_control_point.m  knots_uniform.m  quatLog.m  quat_squad.m  readme.md  sCurve.m  s_speed_up.m  untitled2.m  velocity_planning.m
optimal_planing/: CMakeLists.txt
optimal_planing/include/: B_Spline.h  MultiPointsTrajectory.h  S_Type_Velocity.h  SphericalQuadraticInterpolation.h  interface_toppra.h  kinematics_6axis_ur.h  rotational_interpolation.h  trapezoidal_velocity.h
optimal_planing/src/: B_Spline.cpp  MultiPointsTrajectory.cpp  S_Type_Velocity.cpp  SphericalQuadraticInterpolation.cpp  interface_toppra.cpp  kinematics_6axis_ur.cpp  main.cpp  rotational_interpolation.cpp  trapezoidal_velocity.cpp
